# coursera_cpp

./: .gitignore  README.md
RedBelt/: RedBelt.sln
RedBelt/TestExrs/: Source.cpp  TestExrs.vcxproj
RedBelt/VS Code/WEEK1/CLASS_TEMPLATE/: deque.cpp  paginator.cpp  table.cpp
RedBelt/VS Code/WEEK1/MACRO/: uniq_id.cpp
RedBelt/VS Code/WEEK2/express/: defaultInput.txt  fast.cpp  generateBigData.cpp  input.txt  slow.cpp
RedBelt/VS Code/WEEK2/hotel/: generateBigData.cpp  (+1 more)
RedBelt/VS Code/WEEK3/: linked_list.cpp  object_pool.cpp  simple_vector.cpp  simple_vector.h  swap_sort_copy.cpp
RedBelt/VS Code/WEEK4/: airport_counter.cpp  footballCommand.cpp  generateBigData.cpp  stack_vector.cpp  stack_vector.h  text_editor.cpp  translator.cpp
RedBelt/VS Code/WEEK4/server_stats/: CMakeLists.txt  server_stats.cpp  stats.cpp  stats.h
RedBelt/VS Code/WEEK5/: group_heavy_strings.cpp  group_heavy_strings_coursera_variant.cpp  josephus_permutation.cpp  merge_sort_3.cpp  simple_vector.h  simple_vector_copy_assignment.cpp  simple_vector_move.cpp  simple_vector_move.h  simple_vector_move_coursera.h  split_into_sentences.cpp
RedBelt/VS Code/includes/: profile.h  test_runner.h
RedBelt/VS/WEEK1/: WEEK1.vcxproj  WEEK1.vcxproj.filters  airline_ticket.h  sort_by.cpp  update_field.cpp
RedBelt/WEEK1/: airline_ticket.cpp  defines.cpp  log.cpp  print_values.cpp
YellowBelt/: YellowBelt.sln
YellowBelt/Integers/: Integers.vcxproj  main.cpp
YellowBelt/Matrix/: .project  Matrix.vcxproj  main.cpp
white belt/WhiteBelt/: WhiteBelt.sln
white belt/WhiteBelt/Week4/: Week4.vcxproj  main.cpp
(+6 files in other folders)
